# BitNet

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md
bitnet_train/: bitlinear.py  bitlinear_metal.py  conversion.py  data.py  distill.py  moe_metrics.py  optim.py  provenance.py  quant.py  reconstruct.py  smoothing.py
bitnet_train/metal/: VENDOR.md  build.sh  pyproject.toml
bitnet_train/metal/include/metal/ops/warp/register/tile/: dequant.metal
bitnet_train/metal/kernels/bitnet/: fake_quant.metal  kd_kl_dense.metal  kd_kl_topk.metal  weight_quant_ternary.metal
bitnet_train/metal/kernels/common/: tk_launch.h
bitnet_train/metal/kernels/moe/moe/: moe.metal
bitnet_train/metal/kernels/norms/rms_norm/: rms_norm.metal
bitnet_train/metal/kernels/optimizers/optim/: adamw.metal
bitnet_train/metal/kernels/quantization/qgemv_int/: qgemv_int.metal
bitnet_train/metal/perf/: bitnet_training_kernels.md  gap_kernels_2026-07-06.md
bitnet_train/metal/tk_torch/: __init__.py  torch_kernels.mm
docs/: improve_quant.md  moe_train_plan.md  new-kernels.md  train_plan.md
quant/: assemble_evaluation.py  baseline_matrix.py  calibrate_kv.py  calibration_data.md  capability_eval.py  codebook_study.py  evaluate.py  export_gguf.py  feedback.md  merge_calibration.py  quant.md  quant.py  quant_spec.md  search_policy.py  speculative_gate.py  validate_kv_eval.py  validate_runtime_perf.py
tests/: test_bitlinear_forward.py  test_bitlinear_grad.py  test_chunked_losses_match_full.py  test_ci_microloop.py  test_config_preservation.py  test_conversion_shapes.py  test_cpu_engine.py  (+50 more)
(+81 files in other folders)
